updated train loop

--- a/config/sample.yaml
+++ b/config/sample.yaml
@@ -1,3 +1,5 @@
+OUTPUT_ROOT_DIR: './outputs'
+
 DATA:
   PATH: '../CheXpert-v1.0-small/'
   BATCH_SIZE: 100
@@ -8,5 +10,8 @@ INPUT:
 
 SOLVER:
   BASE_LR: 0.001
-  NUM_EPOCHS: 20
-  VAL_INTERVAL: 5
+  NUM_ITERS: 2000
+  VAL_INTERVAL: 1
+  MIXUP_ALPHA: 0
+  WEIGHT_DECAY: 0
+  SCHEDULER_STEP_SIZE: 15
