--- a/config/chexpert_specific.yaml
+++ b/config/chexpert_specific.yaml
@@ -5,9 +5,9 @@ DATA:
   BATCH_SIZE: 100
 
 SOLVER:
-  BASE_LR: 0.001
-  NUM_ITERS: 2000
+  BASE_LR: 1.0e-4
+  NUM_ITERS: 17640
   VAL_INTERVAL: 1
   MIXUP_ALPHA: 0
-  WEIGHT_DECAY: 0
-  SCHEDULER_STEP_SIZE: 500
+  WEIGHT_DECAY: 1.0e-4
+  SCHEDULER_STEP_SIZE: 5000
