fixed dataloader transforms order and changed config syntax

--- a/config/chexpert_specific.yaml
+++ b/config/chexpert_specific.yaml
@@ -6,8 +6,8 @@ DATA:
 
 SOLVER:
   BASE_LR: 1.0e-4
-  NUM_ITERS: 17640
+  NUM_EPOCHS: 15
+  SCHEDULER_STEP_SIZE: 5
   VAL_INTERVAL: 1
   MIXUP_ALPHA: 0
   WEIGHT_DECAY: 1.0e-4
-  SCHEDULER_STEP_SIZE: 5880
