added beta parameters to config

--- a/config/chexpert_specific.yaml
+++ b/config/chexpert_specific.yaml
@@ -3,11 +3,22 @@ OUTPUT_ROOT_DIR: './outputs'
 DATA:
   PATH: '/home/smodi9/CheXpert-v1.0-small/'
   BATCH_SIZE: 100
-  TRAIN_SIZE: 1_000_000
+  LABELED_SIZE: 1_000_000
+  UNLABELED_SIZE: 15_000
 
 SOLVER:
   BASE_LR: 1.0e-4
-  NUM_EPOCHS: 15
   SCHEDULER_STEP_SIZE: 10
-  MIXUP_ALPHA: 0.0
   WEIGHT_DECAY: 1.0e-4
+  MIXUP_ALPHA: 0.0
+  SELF_TRAINING: False
+
+TEACHER:
+  EPOCHS: 15
+  BETA_C: 0.2 # (0.1, 0.25)
+
+STUDENT:
+  EPOCHS: 15
+  BETA_L: 0.0
+  BETA_U: 0.8
+  BETA_C: 0.2 # (0.1, 0.25)
