added student-teacher dynamic

--- a/config/chexpert_specific.yaml
+++ b/config/chexpert_specific.yaml
@@ -11,14 +11,14 @@ SOLVER:
   SCHEDULER_STEP_SIZE: 10
   WEIGHT_DECAY: 1.0e-4
   MIXUP_ALPHA: 0.0
-  SELF_TRAINING: False
+  SELF_TRAINING: True
 
 TEACHER:
-  EPOCHS: 15
+  EPOCHS: 1
   BETA_C: 0.2 # (0.1, 0.25)
 
 STUDENT:
-  EPOCHS: 15
+  EPOCHS: 1
   BETA_L: 0.0
   BETA_U: 0.8
   BETA_C: 0.2 # (0.1, 0.25)
