--- a/config/chexpert_base.yaml
+++ b/config/chexpert_base.yaml
@@ -14,11 +14,13 @@ SOLVER:
   SELF_TRAINING: True
 
 TEACHER:
-  EPOCHS: 1
-  BETA_C: 0.2 # (0.1, 0.25)
+  EPOCHS: 15
+  BETA_L: 1.0
+  BETA_U: 1.0 # default value for both regular and self-training teacher.
+  BETA_C: 0.0 # (0.1, 0.25)
 
 STUDENT:
-  EPOCHS: 1
-  BETA_L: 0.0
+  EPOCHS: 15
+  BETA_L: 0.9
   BETA_U: 0.8
-  BETA_C: 0.2 # (0.1, 0.25)
+  BETA_C: 0.0 # (0.1, 0.25)
