changed dataloader to give more unlabeled data

--- a/config/chexpert_base.yaml
+++ b/config/chexpert_base.yaml
@@ -11,7 +11,7 @@ SOLVER:
   SCHEDULER_STEP_SIZE: 10
   WEIGHT_DECAY: 1.0e-4
   MIXUP_ALPHA: 0.0
-  SELF_TRAINING: True
+  SELF_TRAINING: False
 
 TEACHER:
   EPOCHS: 15
