--- a/config/maml_base.yaml
+++ b/config/maml_base.yaml
@@ -7,7 +7,6 @@ DATA:
   UNLABELED_SIZE: 15_000
 
 SOLVER:
-  BASE_LR: 1.0e-4
   SCHEDULER_STEP_SIZE: 10
   WEIGHT_DECAY: 1.0e-4
   MIXUP_ALPHA: 0.0
@@ -20,3 +19,6 @@ MAML:
   K_SHOT: 3 # 15
   K_QUERY: 2
   NOVEL_CLASSES: [26, 27, 28, 29, 30]
+  ALPHA: 1.0e-2
+  BETA: 1.0e-3
+  N_INNER_UPDATES: 1
