added simclr and updated dataloader

--- a/config/maml_base.yaml
+++ b/config/maml_base.yaml
@@ -2,7 +2,7 @@ OUTPUT_ROOT_DIR: './outputs/maml'
 
 DATA:
   PATH: '/home/smodi9/CheXpert-v1.0-small/'
-  BATCH_SIZE: 4
+  BATCH_SIZE: 32
   LABELED_SIZE: 20_000
   UNLABELED_SIZE: 15_000
 
@@ -13,12 +13,14 @@ SOLVER:
   SELF_TRAINING: False
 
 MAML:
-  EPOCHS: 1000
-  N_TASKS: 1000
+  EPOCHS: 6
+  N_TASKS_TRN: 10000
+  N_TASKS_TST: 100
   N_WAY: 5 # 1 or 5
   K_SHOT: 3 # 15
   K_QUERY: 2
-  NOVEL_CLASSES: [1, 2, 8, 16, 23]
+  NOVEL_CLASSES: [1, 2, 8, 16, 0]
   ALPHA: 1.0e-2
   BETA: 1.0e-3
-  N_INNER_UPDATES: 1
+  N_INNER_UPDATES_TRN: 5
+  N_INNER_UPDATES_TST: 10
