--- a/config/chexpert_all.yaml
+++ b/config/chexpert_all.yaml
@@ -3,25 +3,24 @@ OUTPUT_ROOT_DIR: './outputs'
 DATA:
   PATH: '/home/smodi9/CheXpert-v1.0-small/'
   BATCH_SIZE: 100
-  LABELED_SIZE: 100_000
+  LABELED_SIZE: 1_000
   UNLABELED_SIZE: 15_000
-  WEAK_AUG: False
 
 SOLVER:
   BASE_LR: 1.0e-4
   SCHEDULER_STEP_SIZE: 10
   WEIGHT_DECAY: 1.0e-4
-  MIXUP_ALPHA: 0.0
-  SELF_TRAINING: False
+  MIXUP_ALPHA: 0.6
+  SELF_TRAINING: True
 
 TEACHER:
   EPOCHS: 15
   BETA_L: 1.0
   BETA_U: 1.0 # default value for both regular and self-training teacher.
-  BETA_C: 0.0 # (0.1, 0.25)
+  BETA_C: 0.2 # (0.1, 0.25)
 
 STUDENT:
   EPOCHS: 15
   BETA_L: 0.9
   BETA_U: 0.8
-  BETA_C: 0.0 # (0.1, 0.25)
+  BETA_C: 0.2 # (0.1, 0.25)
